--- a/automotive_autonomy_msgs/package.xml
+++ b/automotive_autonomy_msgs/package.xml
@@ -21,7 +21,6 @@
   <exec_depend>automotive_platform_msgs</exec_depend>
 
   <export>
-    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
-    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
