--- a/automotive_navigation_msgs/package.xml
+++ b/automotive_navigation_msgs/package.xml
@@ -34,8 +34,7 @@
   <member_of_group>rosidl_interface_packages</member_of_group>
 
   <export>
-    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
-    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
+    <build_type>ament_cmake</build_type>
     <rosbag_migration_rule rule_file="migration/0_2.0.3-3.0.1.bmr" />
   </export>
 </package>
